// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Shallow Snapshot Tests basic 1`] = `
<ForwardRef(Typography)
  component="div"
  sx={
    Object {
      "alignItems": "center",
      "columnGap": undefined,
      "display": "flex",
      "flexWrap": "wrap",
      "fontSize": undefined,
      "justifyContent": "center",
    }
  }
>
  <Memo(ForwardRef(MapIcon)) />
  地図
</ForwardRef(Typography)>
`;

exports[`Shallow Snapshot Tests left align 1`] = `
<ForwardRef(Typography)
  component="div"
  sx={
    Object {
      "alignItems": "center",
      "columnGap": undefined,
      "display": "flex",
      "flexWrap": "wrap",
      "fontSize": undefined,
      "justifyContent": "left",
    }
  }
>
  <Memo(ForwardRef(MapIcon)) />
  地図
</ForwardRef(Typography)>
`;

exports[`Shallow Snapshot Tests right icon 1`] = `
<ForwardRef(Typography)
  sx={
    Object {
      "alignItems": "center",
      "columnGap": undefined,
      "display": "flex",
      "flexWrap": "wrap",
      "fontSize": undefined,
      "justifyContent": "center",
    }
  }
>
  地図
  <Memo(ForwardRef(MapIcon)) />
</ForwardRef(Typography)>
`;
